--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-CONFIG_URL=https://raw.githubusercontent.com/york-cs-dams/flippd-dams/master/
+CONFIG_URL_OLD=https://raw.githubusercontent.com/york-cs-dams/flippd-dams/master/
+CONFIG_URL=../../
 COOKIE_SECRET=abcdefg
