--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: ruby
 rvm: 2.2.2
 services: mysql
 before_script:
-  - mysql -e "SET PASSWORD FOR 'root'@'127.0.0.1' = password('root')"
+  - mysql -e "SET PASSWORD FOR 'root'@'localhost' = password('root')"
   - mysql -e "CREATE DATABASE flippd"
   - mysql -e "CREATE DATABASE flippd_test"
