--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 CONFIG_URL_OLD=https://raw.githubusercontent.com/york-cs-dams/flippd-dams/master/
-CONFIG_URL=../../
+CONFIG_URL=./
 COOKIE_SECRET=abcdefg
